Modified testclient, makefile, readme files